rebranding for jmdynamic

--- a/css/root.less
+++ b/css/root.less
@@ -7,9 +7,9 @@
 
     // Website colors
     :root {
-        --primary: #FFBA19;
-        --primaryShade: #ffd675;
-        --primaryDark: #805d0d;
+        --primary: #C43302;
+        --primaryShade: #0A7373;
+        --primaryDark: #A22A02;
         --bodyText: #1a1a1a;
     }
 
@@ -106,7 +106,7 @@
         background-color: var(--primary);
 
         // Transition Properties
-        color: #000;
+        color: #f6f6f6;
         transition: color .3s;
         transition-delay: .1s;
 
@@ -878,7 +878,7 @@
 							display: block;
 							height: 2/18em;
 							width: 97/18em;
-							background: #EEBE76;
+							background: #B7BF99;
 							opacity: 1;
 							bottom: -16/18em;
 							left: 0;
@@ -1024,7 +1024,7 @@
 @media only screen and (min-width: 0em) {
     body.dark-mode {
         #footer {
-            background: #061623;
+            background: #1C1C1C;
         }
     }
 }
