--- a/css/dark.css
+++ b/css/dark.css
@@ -4,9 +4,9 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   :root {
-    --dark: #082032;
-    --medium: #2C394B;
-    --accent: #334756;
+    --dark: #111111;
+    --medium: #1d1d1d;
+    --accent: #1f1f1f;
   }
   body.dark-mode {
     background-color: var(--dark);
