--- a/css/root.css
+++ b/css/root.css
@@ -4,9 +4,9 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   :root {
-    --primary: #FFBA19;
-    --primaryShade: #ffd675;
-    --primaryDark: #805d0d;
+    --primary: #C43302;
+    --primaryShade: #0A7373;
+    --primaryDark: #A22A02;
     --bodyText: #1a1a1a;
   }
   /* roboto-regular - latin */
@@ -100,7 +100,7 @@
     position: relative;
     z-index: 1;
     background-color: var(--primary);
-    color: #000;
+    color: #f6f6f6;
     -webkit-transition: color .3s;
     transition: color .3s;
     -webkit-transition-delay: .1s;
@@ -676,8 +676,8 @@
     display: inline-block;
     margin: auto;
     width: auto;
-    height: 3.125em;
-    margin-bottom: 1.875em;
+    height: 5em;
+    margin-bottom: 1.5em;
     text-align: center;
   }
   #footer .left-section .logo img {
@@ -768,7 +768,7 @@
     display: block;
     height: 0.11111111em;
     width: 5.38888889em;
-    background: #EEBE76;
+    background: #B7BF99;
     opacity: 1;
     bottom: -0.88888889em;
     left: 0;
@@ -840,7 +840,7 @@
   #footer .left-section .logo {
     text-align: left;
     margin-left: 0;
-    height: 4.375em;
+    height: 10em;
   }
   #footer .left-section p {
     text-align: left;
@@ -894,6 +894,6 @@
 /* Dark Mode */
 @media only screen and (min-width: 0em) {
   body.dark-mode #footer {
-    background: #061623;
+    background: #1C1C1C;
   }
 }
